fixed word wrap and refactored

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -48,6 +48,7 @@ section.text {
   padding: 10px 10px;
   font-size: 150%;
   line-height: 150%;
+  overflow-wrap: break-word;
 }
 
 
